Fixed some styling parts for improved responsiveness on small screens and changed the heading message on the welcome page

--- a/src/Components/Testimonies/Testimony.css
+++ b/src/Components/Testimonies/Testimony.css
@@ -152,7 +152,7 @@
     column-count: 2;
   }
 }
-@media (max-width: 476px) {
+@media (max-width: 480px) {
   .testimonies-container {
     column-count: 1;
   }
